# PNANA

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  README_EN.md  RELEASE.md  build.sh  go.mod
.github/: README.md
.github/workflows/: build.yml  docs.yml  pre-push-validation.yml  release.yml
cmake/: CheckAtomic.cmake  ConfigureTreeSitter.cmake  FindTreeSitter.cmake  FindTreeSitterLanguages.cmake  install_plugins.sh.in  install_user_config.sh.in
config/: default_config.json
docs/: DEPENDENCIES.md  PLUGINS.md  QUICKSTART.md  README.md  ROADMAP.md
example/language/: Dockerfile  Makefile  README.md  build.sh  config.toml  config.yaml  hello.c  hello.clj  hello.cpp  hello.ex  hello.go  hello.hs  hello.java  hello.js  hello.kt  hello.lisp  hello.ll  hello.lua  hello.mips.s  hello.nim  hello.php  hello.pl  hello.py  hello.r  hello.rb  hello.rs  hello.s  hello.scala  hello.sml  hello.swift  hello.ts  index.html  meson.build  meson_options.txt  package.json  schema.sql
go/: ssh_client.go
include/pnana/core/: config_manager.h  document.h  editor.h
include/pnana/core/input/: input_router.h
include/pnana/core/input/region_handlers/: git_panel_handler.h
include/pnana/core/ui/: base_region_renderer.h  border_manager.h  ui_router.h
include/pnana/features/: encoding_converter.h  file_browser.h  image_preview.h  split_view.h  ssh_client.h  ssh_client_cgo.h  terminal.h
include/pnana/features/SyntaxHighlighter/: syntax_highlighter.h
include/pnana/features/lsp/: document_change_tracker.h  lsp_async_manager.h  lsp_client.h  lsp_completion_cache.h  lsp_request_manager.h  lsp_server_config.h  lsp_server_manager.h  lsp_stdio_connector.h  lsp_types.h
include/pnana/features/ssh/: ssh_client.h  ssh_client_cgo.h
include/pnana/features/terminal/: terminal_color.h  terminal_completion.h  terminal_shell.h  terminal_utils.h
include/pnana/input/: action_executor.h  key_action.h
include/pnana/plugins/: editor_api.h  file_api.h  lua_api.h  plugin_manager.h  system_api.h  theme_api.h
include/pnana/ui/: completion_popup.h  create_folder_dialog.h  diagnostics_popup.h  encoding_dialog.h  file_browser_view.h  file_type_color_mapper.h  format_dialog.h  git_panel.h  help.h  icons.h  new_file_prompt.h  save_as_dialog.h  search_dialog.h  split_dialog.h  ssh_transfer_dialog.h  statusbar.h  terminal_ui.h  theme.h  theme_menu.h  welcome_screen.h
include/pnana/utils/: clipboard.h  file_type_detector.h  file_type_icon_mapper.h
include/pnana/vgit/: git_manager.h  git_panel.h
plugins/theme-pro-plugin/: init.lua
scripts/: README.md  generate_release_notes.sh  install_package.sh
src/: main.cpp
src/core/: config_manager.cpp  document.cpp  editor.cpp  editor_cursor.cpp  editor_edit.cpp  editor_file_ops.cpp  editor_input.cpp  editor_lsp.cpp  editor_ssh.cpp  editor_ui.cpp
src/core/input/: input_router.cpp
src/core/input/region_handlers/: file_browser_handler.cpp  git_panel_handler.cpp  git_panel_handler.h  terminal_handler.cpp
src/core/ui/: base_region_renderer.cpp  border_manager.cpp  ui_router.cpp
src/features/: encoding_converter.cpp  image_preview.cpp  split_view.cpp  terminal.cpp
src/features/SyntaxHighlighter/: syntax_highlighter.cpp  syntax_highlighter_tree_sitter.cpp
src/features/lsp/: document_change_tracker.cpp  lsp_async_manager.cpp  lsp_client.cpp  lsp_completion_cache.cpp  lsp_request_manager.cpp  lsp_server_config.cpp  lsp_server_manager.cpp  lsp_stdio_connector.cpp
src/features/md_render/: markdown_renderer.cpp
src/features/ssh/: ssh_client.cpp
src/features/terminal/: terminal.cpp  terminal_builtin.cpp  terminal_color.cpp  terminal_completion.cpp  terminal_parser.cpp  terminal_shell.cpp  terminal_utils.cpp
src/features/vgit/: git_manager.cpp
src/input/: action_executor.cpp  event_parser.cpp  key_action.cpp  key_binding_manager.cpp
src/plugins/: editor_api.cpp  file_api.cpp  lua_api.cpp  plugin_manager.cpp  system_api.cpp  theme_api.cpp
src/ui/: completion_popup.cpp  create_folder_dialog.cpp  diagnostics_popup.cpp  encoding_dialog.cpp  file_browser_view.cpp  file_picker.cpp  file_type_color_mapper.cpp  format_dialog.cpp  git_panel.cpp  help.cpp  helpbar.cpp  new_file_prompt.cpp  plugin_manager_dialog.cpp  save_as_dialog.cpp  search_dialog.cpp  split_dialog.cpp  ssh_transfer_dialog.cpp  statusbar.cpp  tabbar.cpp  terminal_ui.cpp  theme.cpp  theme_menu.cpp  welcome_screen.cpp
src/utils/: clipboard.cpp  file_type_detector.cpp  file_type_icon_mapper.cpp
